# horn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  horn.cabal  stack.yaml
app/: Main.hs
doc/: sql.grammar.ebnf
misc/: BeamSchema.hs  Main.hs  MainTyped.hs  MainTypedMini.hs
src/: Cognitum.hs  Database.hs  Horn.hs  Language.hs
src/Cognitum/: Entity.hs  Person.hs  Types.hs
src/Horn/: Database.hs  DbType.hs  Entity.hs  Field.hs  FieldSet.hs  PlaceHolder.hs  Relation.hs  Sql.hs  Types.hs
src/Horn/FrontEnd/: Migration.hs  Person.hs
src/Horn/Schema/: Entity.hs  Person.hs  Types.hs
