name:                horn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/horn
license:                ISC
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Development
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
    hs-source-dirs:     src
    exposed-modules:
        Horn
    build-depends:
        base >=4.7 && < 5,
        base-prelude,
        hasql,
        contravariant,
        record >= 0.3.2 && < 0.4,
        text
    default-extensions:
        Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
    default-language:   Haskell2010

executable horn-exe
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        horn
    default-language:   Haskell2010

test-suite horn-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:
        base     >=4.7 && <5,
        horn -any,
        hspec    ==2.*
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

test-suite style
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            HLint.hs
    build-depends:
        base  >=4.7 && <5,
        hlint ==1.*
    default-language:   Haskell2010
    ghc-options:        -Wall

source-repository head
    type:               git
    location:           https://github.com/githubuser/horn
