name:                horn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/horn
license:                MIT
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Development
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
    hs-source-dirs:     src
    exposed-modules:
        Horn
--        ,
--        Horn.DbType,
--        Horn.Field,
--        Horn.FieldSet,
--        Horn.Relation

    build-depends:
        base >=4.7 && < 5

    default-language:   Haskell2010
    default-extensions:
        Arrows, AllowAmbiguousTypes,
        BangPatterns,
        ConstraintKinds,
        DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable,
        EmptyDataDecls,
        FlexibleContexts, FlexibleInstances, FunctionalDependencies,
        GADTs, GeneralizedNewtypeDeriving,
        LambdaCase, LiberalTypeSynonyms,
        MagicHash, MultiParamTypeClasses, MultiWayIf,
        NoMonomorphismRestriction,
        OverloadedStrings,
        PatternGuards, ParallelListComp,
        QuasiQuotes,
        RankNTypes, RecordWildCards,
        ScopedTypeVariables, StandaloneDeriving,
        TemplateHaskell, TupleSections, TypeFamilies, TypeOperators,
        UnboxedTuples, UndecidableInstances

executable horn-exe
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        horn,
        text,
        vector,
        containers,
        beam-core,
        beam-migrate,
        beam-postgres

    default-language:   Haskell2010
    default-extensions:
        Arrows, AllowAmbiguousTypes,
        BangPatterns,
        ConstraintKinds,
        DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable,
        EmptyDataDecls,
        FlexibleContexts, FlexibleInstances, FunctionalDependencies,
        GADTs, GeneralizedNewtypeDeriving,
        LambdaCase, LiberalTypeSynonyms,
        MagicHash, MultiParamTypeClasses, MultiWayIf,
        NoMonomorphismRestriction,
        OverloadedStrings,
        PatternGuards, ParallelListComp,
        QuasiQuotes,
        RankNTypes, RecordWildCards,
        ScopedTypeVariables, StandaloneDeriving,
        TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, TypeApplications,
        UnboxedTuples, UndecidableInstances


source-repository head
    type:               git
    location:           https://github.com/githubuser/horn
